--- a/demo/demo.html
+++ b/demo/demo.html
@@ -1,4 +1,4 @@
-<. All <h1>Simple variables</h1>
+<h1>Simple variables</h1>
 <br>
 <table>
 	<tr>
@@ -27,18 +27,19 @@
 <hr>
 <h1>Control structures</h1>
 <h2>If conditionals</h2>
-{if:$user_role.upper() == "ADMIN"}
+{if $user_role.upper() == "ADMIN" }
     <p>Welcome Administrator</p>
-{elseif:$user_role.upper() == "MEMBER" || $user_role.upper() == "TEAM"}
+{elseif $user_role.upper() == "MEMBER" || $user_role.upper() == "TEAM" }
     <p>Welcome member of the community</p>
 {else}
     <p>You are not a registered user</p>
-{/if}
+{endif}
 <h2>Loops</h2>
 <ul>
-{loop:$users,item=user}
-	<li>User: {$user.name.capitalize()}  Email: {$user.email}  Role: {$user.role.if("admin","administrator").upper()}</li>
-{/loop}
+{ for $i, $user in $users }
+	<li>User {$i}: {$user.name.capitalize()}  Email: {$user.email}  Role: {$user.role.if("admin","administrator").upper()}</li>
+{ endfor }
 </ul>
 
-{include:footer.html}
+
+{ include : footer.html }
