--- a/demo/demo.html
+++ b/demo/demo.html
@@ -11,14 +11,14 @@
 		<td>Email: </td><td>{$user.email}</td>
 	</tr>
 </table>
-<p>Now: {$now.date("c")}</p>
+<p>Now: { $now.toLocal().date("Y-m-d h:i a") }</p>
 <h2>Modifiers</h2>
 <table>
 	<tr>
 		<td>Name: </td><td>{$user.name.upper()}</td>
 	</tr>
 	<tr>
-		<td>Nickname: </td><td>{$user.name.lower().if("ricardo","ricky").capitalize()}</td>
+		<td>Nickname: </td><td>{$user.name.lower().if("ricardo", "ricky").capitalize()}</td>
 	</tr>
 	<tr>
 		<td>Extra: </td><td>{$user.extra.truncate(20)}</td>
@@ -27,9 +27,9 @@
 <hr>
 <h1>Control structures</h1>
 <h2>If conditionals</h2>
-{if $user_role.upper() == "ADMIN" }
+{if $user_role.upper() eq "ADMIN" }
     <p>Welcome Administrator</p>
-{elseif $user_role.upper() == "MEMBER" || $user_role.upper() == "TEAM" }
+{elseif $user_role.upper() eq "MEMBER" or $user_role.upper() eq "TEAM" }
     <p>Welcome member of the community</p>
 {else}
     <p>You are not a registered user</p>
@@ -37,7 +37,7 @@
 <h2>Loops</h2>
 <ul>
 { for $i, $user in $users }
-	<li>User {$i}: {$user.name.capitalize()}  Email: {$user.email}  Role: {$user.role.if("admin","administrator").upper()}</li>
+	<li>User { $i }: {$user.name.capitalize()}  Email: {$user.email}  Role: {$user.role.if("admin","administrator").upper()}</li>
 { endfor }
 </ul>
 
