--- a/demo/demo.html
+++ b/demo/demo.html
@@ -11,7 +11,7 @@
 		<td>Email: </td><td>{$user.email}</td>
 	</tr>
 </table>
-<p>Now: { $now.toLocal().date("Y-m-d h:i a") }</p>
+<p>Date management: {$now.toLocal().date("Y-m-d h:i a")}</p>
 <h2>Modifiers</h2>
 <table>
 	<tr>
@@ -27,19 +27,19 @@
 <hr>
 <h1>Control structures</h1>
 <h2>If conditionals</h2>
-{if $user_role.upper() eq "ADMIN" }
+{if $user_role.upper() eq "ADMIN"}
     <p>Welcome Administrator</p>
-{elseif $user_role.upper() eq "MEMBER" or $user_role.upper() eq "TEAM" }
+{elseif $user_role.upper() eq "MEMBER" or $user_role.upper() eq "TEAM"}
     <p>Welcome member of the community</p>
 {else}
     <p>You are not a registered user</p>
 {endif}
 <h2>Loops</h2>
 <ul>
-{ for $i, $user in $users }
-	<li>User { $i }: {$user.name.capitalize()}  Email: {$user.email}  Role: {$user.role.if("admin","administrator").upper()}</li>
-{ endfor }
+{for $i, $user in $users}
+	<li>User {$i}: {$user.name.capitalize()}  Email: {$user.email}  Role: {$user.role.if("admin","administrator").upper()}</li>
+{endfor}
 </ul>
 
 
-{ include  footer.html }
+{include  footer.html}
