--- a/demo/demo.html
+++ b/demo/demo.html
@@ -11,8 +11,8 @@
 		<td>Email: </td><td>{$user.email}</td>
 	</tr>
 </table>
-<p>Date management: {$now.toLocal().date("Y-m-d h:i a")}</p>
 <h2>Modifiers</h2>
+<p>Date management: {$now.toLocal().date("Y-m-d h:i a")}</p>
 <table>
 	<tr>
 		<td>Name: </td><td>{$user.name.upper()}</td>
@@ -24,6 +24,8 @@
 		<td>Extra: </td><td>{$user.extra.truncate(20)}</td>
 	</tr>
 </table>
+<h3>Modifiers with errors</h3>
+<p>Date management: {$now.sha1().toLocal().date("Y-m-d h:i a")}</p>
 <hr>
 <h1>Control structures</h1>
 <h2>If conditionals</h2>
