--- a/demo/demo.html
+++ b/demo/demo.html
@@ -25,7 +25,8 @@
 	</tr>
 </table>
 <h3>Modifiers with errors</h3>
-<p>Date management: {$now.sha1().toLocal().date("Y-m-d h:i a")}</p>
+<p>Can't sha1() a date object: {$now.sha1()}</p>
+<p>Or when missing a required parameter: {$user_role.truncate()}
 <hr>
 <h1>Control structures</h1>
 <h2>If conditionals</h2>
