--- a/demo/demo.html
+++ b/demo/demo.html
@@ -26,7 +26,7 @@
 </table>
 <h3>Modifiers with errors</h3>
 <p>Can't sha1() a date object: {$now.sha1()}</p>
-<p>Or when missing a required parameter: {$user_role.truncate()}
+<p>Or when missing a required parameter: {$user_role.truncate()}</p>
 <hr>
 <h1>Control structures</h1>
 <h2>If conditionals</h2>
