--- a/demo/demo.html
+++ b/demo/demo.html
@@ -1,3 +1,21 @@
+<!doctype>
+<html>
+<head>
+	<style>
+		body {
+			font-family: Arial, Tahoma, sans-serif;
+			font-size: 14px;
+			color: #333333;
+		}
+		h1 {
+			font-size: 30px;
+			padding: 10px 0;
+			border-bottom: solid 2px #e6e6e6;
+			margin-bottom: 10px;
+		}
+	</style>
+</head>
+<body>
 <h1>Simple variables</h1>
 <br>
 <table>
@@ -11,7 +29,15 @@
 		<td>Email: </td><td>{$user.email}</td>
 	</tr>
 </table>
-<h2>Modifiers</h2>
+<h2>Context</h2>
+<p>Print 'test' GET variable: <b>{$context.get.test.default("test variable not set")}</b></p>
+<h3>Easy way to check if variables are set or empty</h3>
+{if $context.get.test}
+<p>Context GET variable EXISTS</p>
+{else}
+<p>Context GET variables IS EMPTY</p>
+{endif}
+<h1>Modifiers</h1>
 <p>Date management: {$now.toLocal().date("Y-m-d h:i a")}</p>
 <table>
 	<tr>
@@ -24,10 +50,12 @@
 		<td>Extra: </td><td>{$user.extra.truncate(20)}</td>
 	</tr>
 </table>
-<h3>Modifiers with errors</h3>
+<h2>Modifiers with errors</h2>
 <p>Can't sha1() a date object: {$now.sha1()}</p>
 <p>Or when missing a required parameter: {$user_role.truncate()}</p>
-<hr>
+<h2>Custom modifier</h2>
+<p>{$user.name.myModifier("Hello ", " goodbye")}</p>
+
 <h1>Control structures</h1>
 <h2>If conditionals</h2>
 {if $user_role.upper() eq "ADMIN"}
@@ -44,5 +72,5 @@
 {endfor}
 </ul>
 
-
 {include  footer.html}
+</body>
