--- a/demo/footer.html
+++ b/demo/footer.html
@@ -1,2 +1,2 @@
-<div style="padding-top: 20px; margin-top: 20px">Tonic&copy; {$now.date("Y")}</div>
+<div style="padding-top: 20px; margin-top: 20px" class="{$now.date("c")}">Tonic&copy; {$now.date("Y")}</div>
 {include footer_inner.html}
