Finalized PHP 7.4 Update
1. Added supression tags to doc block
2. removed unused functionality ($is_php)
3. added type hinting

--- a/examples/main.html
+++ b/examples/main.html
@@ -7,10 +7,15 @@
 <body>
 <h1>Example</h1>
 
+<h2>Variables</h2>
+{$variable}
+
 <h2>Loops</h2>
-{loop $element in $array}
-{$element}<br />
-{endloop}
+<ul>
+    {loop $element in $array}
+    <li>{$element}</li>
+    {endloop}
+</ul>
 
 <h2>Includes</h2>
 {include example.html}
